--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <button type="button" data-action="start">Start</button>
     <button type="button" data-action="stop">Stop</button>
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 
 </html>
